--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
-h1 {
-  font-size: 72pt;
-  color: blue;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Helvetica;
+}
+
+#title {
+  font-size: 46pt;
 }
